--- a/BlogExamples/.project
+++ b/BlogExamples/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BlogLombok</name>
+	<name>BlogExamples</name>
 	<comment></comment>
 	<projects>
 	</projects>
